--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 2905
 Mongo_DB_URI = mongodb+srv://tinu2823:BxioSzZvaI2Flpk2@cluster0.8xvjqic.mongodb.net/chat-app-demo?retryWrites=true&w=majority&appName=Cluster0
+JWT_SECREAT = YQgLRoH/TMQosrUIl1FEeGRXTdFfuChWONfiQebmPkM=
 # BxioSzZvaI2Flpk2
 # tinu2823
