Added Users endpoint & frontend Ui

--- a/.env
+++ b/.env
@@ -2,4 +2,9 @@ PORT = 2905
 Mongo_DB_URI = mongodb+srv://tinu2823:BxioSzZvaI2Flpk2@cluster0.8xvjqic.mongodb.net/chat-app-demo?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET = YQgLRoH/TMQosrUIl1FEeGRXTdFfuChWONfiQebmPkM=
 # BxioSzZvaI2Flpk2
-# tinu2823
+# 
+
+#demo purpose - mongodb installation
+#designerraje
+#mPSZHdojj9LmW0dX
+#mongodb+srv://designerraje:mPSZHdojj9LmW0dX@cluster0.jwbbb1n.mongodb.net/chat-app-demo?retryWrites=true&w=majority&appName=Cluster0
